force-app/main/default/objects/aig_AI_Use_Case_Data_Source__c/aig_AI_Use_Case_Data_Source__c.object-meta.xml
<CustomObject>
    <label>AI Use Case Data Source</label>
    <nameField>
        <displayFormat>DS-{0000000}</displayFormat>
        <label>AI Use Case Data Source Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Use Case Data Sources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>