force-app/main/default/objects/aig_AI_Use_Case_Data_Source__c/fields/aig_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>aig_Data_Source__c</fullName>
    <label>Data Source</label>
    <referenceTo>aig_AI_Data_Source__c</referenceTo>
    <relationshipLabel>AI Use Case Data Sources</relationshipLabel>
    <relationshipName>aig_AI_Use_Case_Data_Sources</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>