force-app/main/default/objects/aig_AI_Use_Case_Data_Source__c/fields/aig_Description__c.field-meta.xml
<CustomField>
    <fullName>aig_Description__c</fullName>
    <inlineHelpText>Describe the quality of the data and give an order of magnitude.  I.e. each instance of this use case will use around N rows of data</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>